2009-09-01  Vincent Untz  <vuntz@gnome.org>

	* AUTHORS: update, after request from Andrew T. Veliath.

2009-03-17  Vincent Untz  <vuntz@gnome.org>

	* configure.in: post-release bump to 0.8.14

==================== 0.8.13 ====================

2009-03-17  Vincent Untz  <vuntz@gnome.org>

	* NEWS: version 0.8.13

2008-09-17  Kjartan Maraas  <kmaraas@gnome.org>

	* util.c: clean up some warnings from sparse/gcc.
	Closes bug #568677.
	Makefile.am: Put local includes first. Closes
	bug #536178.

=========================== 0.8.12 ========================

2008-12-02  Matthias Clasen <mclasen@redhat.com>

	Bug 559395 - libIDL 0.8.11 fails to build with bison 2.4

	* parser.y: Fix the build with bison 2.4. Patch by Juergen Daubert

=========================== 0.8.11 ========================

2008-06-02  Tor Lillqvist  <tml@novell.com>

	Bug 536165 - Make libIDL correctly parse cl's pre-processor output

	* lexer.l: Further change needed when using MSVC's cl.exe as the
	preprocessor. Patch by Marcelo Vanzin.

2008-05-19  Tor Lillqvist  <tml@novell.com>

	Bug 522697 - Patch: make libIDL work with Microsoft's compilers

	Patch by Marcelo Vanzin, applied with modifications.

	* configure.in: Define Automake confitional OS_WIN32.

	* Makefile.am: Use --export-symbols libIDL.def on Windows.

	* Makefile.msc.in: Significant changes. Build a DLL with the same
	name as libtool does. Use pkg-config.

	* util.c: Make it work also in the !HAVE_CPP_STDIN && !HAVE_SYMLINK case.

	* util.h: Make __IDL_tmp_filename const.

	* include/libIDL/IDL.h.in: Rework the dllimport logic. Use
	LIBIDL_VAR to decorate imported variables, similar to
	GLIB_VAR. Unlike Marcelo's patch, I decided not to decorate
	functions. Maybe later I can be convinced it would be a good idea,
	but for now just use the .def file to export them and let them be
	imported automatically.

	* README.win32
	* libIDL.def: Update.

2008-03-18  Christian Persch  <chpe@gnome.org>
