@@ -8,6 +8,9 @@ export_symbols = -export-symbols libIDL.def
 endif
 
 SUBDIRS = include
+
+DISTCHECK_CONFIGURE_FLAGS = --disable-silent-rules
+
 INCLUDES =                             \
 	-DYYDEBUG=1                    \
 	-DYYERROR_VERBOSE=1            \
@@ -20,17 +23,17 @@ YFLAGS = -d -v 2>/dev/null
 
 lexer.c: $(srcdir)/lexer.l parser.h
 	@rm -f $@
-	$(LEX) $(LFLAGS) -t $(srcdir)/lexer.l | sed -e 's/yy/__IDL_/g' >$@
+	$(AM_V_GEN) $(LEX) $(LFLAGS) -t $(srcdir)/lexer.l | sed -e 's/yy/__IDL_/g' >$@
 
 stamp-parser: $(srcdir)/parser.y
-	$(YACC) $(YFLAGS) $(srcdir)/parser.y
-	touch $@
+	$(AM_V_GEN) $(YACC) $(YFLAGS) $(srcdir)/parser.y
+	@touch $@
 
 parser.c: stamp-parser
-	test -f y.tab.c && mv -f y.tab.c parser.c || touch $@
+	$(AM_V_GEN) test -f y.tab.c && mv -f y.tab.c parser.c || touch $@
 
 parser.h: stamp-parser
-	test -f y.tab.h && mv -f y.tab.h parser.h || touch $@
+	$(AM_V_GEN) test -f y.tab.h && mv -f y.tab.h parser.h || touch $@
 
 MOSTLYCLEANFILES	= parser.output y.output
 
