@@ -27,6 +27,8 @@ AC_CONFIG_SRCDIR([include/libIDL/IDL.h.in])
 
 AM_INIT_AUTOMAKE([1.9 no-define no-dist-gzip dist-bzip2])
 
+m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])
+
 AC_SUBST(LIBIDL_MAJOR_VERSION, [libidl_major_version])
 AC_SUBST(LIBIDL_MINOR_VERSION, [libidl_minor_version])
 AC_SUBST(LIBIDL_MICRO_VERSION, [libidl_micro_version])
