@@ -1,3 +1,8 @@
+2009-10-12  Christian Persch  <chpe@gnome.org>
+
+	* Makefile.am:
+	* configure.in: Enable silent build rules.
+
 2009-09-01  Vincent Untz  <vuntz@gnome.org>
 
 	* AUTHORS: update, after request from Andrew T. Veliath.
